# libgstrtspserver

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
patch/: 0001-add-property-to-set-sync-false-and-close-session.patch
